# code/src/Modules/Auth/Interface/Routes/AuthRouteProvider.php
@@ -10,14 +10,18 @@ final class AuthRouteProvider
 {
     /** @var callable */
     private $postOwnerLoginHandler;
+    /** @var callable */
+    private $postKeyLoginHandler;
 
-    public function __construct(callable $postOwnerLoginHandler)
+    public function __construct(callable $postOwnerLoginHandler, callable $postKeyLoginHandler)
     {
         $this->postOwnerLoginHandler = $postOwnerLoginHandler;
+        $this->postKeyLoginHandler = $postKeyLoginHandler;
     }
 
     public function register(App $app): void
     {
         $app->post('/api/auth/login', $this->postOwnerLoginHandler);
+        $app->post('/api/auth/key-login', $this->postKeyLoginHandler);
     }
 }
